# Deep_cnn_classifier

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
research/: st1.ipynb  trials.ipynb
src/: __init__.py
src/deepClassifier/: __init__.py
